--- a/app/src/main/res/layout/activity_signup_or_login.xml
+++ b/app/src/main/res/layout/activity_signup_or_login.xml
@@ -51,7 +51,7 @@
             android:layout_marginLeft="12dp"
             android:layout_marginRight="12dp"
             android:textColor="#fff"
-            android:text="Register As Admin"
+            android:text="Register"
             android:background="#323232"
 
             >
