--- a/app/src/main/res/layout/activity_upload_image.xml
+++ b/app/src/main/res/layout/activity_upload_image.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient_color"
 
     >
 
@@ -55,7 +54,7 @@
         android:paddingBottom="12dp"
         android:paddingTop="12dp"
         android:paddingLeft="6dp"
-
+        android:inputType="number"
         android:background="@android:color/transparent"
         />
     <View
