--- a/app/src/main/res/layout/activity_chat_users_list.xml
+++ b/app/src/main/res/layout/activity_chat_users_list.xml
@@ -16,9 +16,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Users"
+            android:text=""
             android:textColor="#fff"
             android:textSize="16sp"
+            android:id="@+id/toolbar_heading"
 
             />
     </android.support.v7.widget.Toolbar>
