--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -39,6 +39,7 @@
                     android:layout_height="wrap_content"
                     android:text=""
                     android:textColor="#ffffff"
+                    android:visibility="gone"
                     android:id="@+id/chat_toolbar_online"/>
             </LinearLayout>
         </RelativeLayout>
